# fragiso

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
shaders/: blue.frag  fragment.frag  orthographic.frag  perspective.frag
src/: game.cpp  game.h  helpful.cpp  helpful.h  main.cpp  ogt_vox.h  voxelshape.h
src/game/: camera.cpp  camera.h
src/lower/: boilerplate.cpp  boilerplate.h  framebuffer.cpp  framebuffer.h  helpful.cpp  helpful.h
src/png/: metadata.cpp  metadata.h
src/vox/: normal.cpp  normal.h  ogt_vox.h  voxelshape.cpp  voxelshape.h
vox/: monu1.vox  sphere.vox  stairs.vox  teapot.vox  test.vox
